kubeyaml/ingress-web-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
  name: web
  namespace: linkerd-viz
spec:
  rules:
  - host: web.lab.cloud.haugom.org
    http:
      paths:
      - backend:
          service:
            name: web
            port:
              number: 8084
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - web.lab.cloud.haugom.org
    secretName: web-cert
